# mcp-crawl4ai-rag

./: .gitignore  README.md  README_LOCAL_FILES.md  anthropic_remote_mcp_example.py  clear_database.py  crawl_local_file.py  direct_encode.py  encode_file.py  encode_file_simple.py  encoded_content.txt  mcp_file_sender.py  process_adk_doc.py  process_local_file.py  process_markdown.py  pyproject.toml  query_embedded_files.py  simple_crawl.py  test.md
OUTPUT_DOCUMENTS/: README_SearchAgent_VertexAI.md  anthropic_message_batch_example.py  claude_vertex_ai_example.py  using_mcp_with_anthropic_api.md
OUTPUT_DOCUMENTS/ANTHROPIC/: MCP_INTEGRATION_GUIDE.md  QUICKSTART_GUIDE.md  README.md  SCRIPT_DOCUMENTATION.md  anthropic_batch_processing_example.py  anthropic_embeddings_example.py  anthropic_mcp_connector_example.py  anthropic_mcp_example.py  anthropic_streaming_example.py  anthropic_tool_use_example.py  anthropic_vision_example.py
OUTPUT_DOCUMENTS/GOOGLE GEMINI/: README.md  claude_sonnet4_example.py  evaluation_example.py  gemini_with_tools.py  google_cloud_run_overview.md  model_comparison_example.py  multi_agent_system.py  requirements.txt  simple_gemini_agent.py  streaming_gemini_agent.py  vertex_ai_gemini_example.py  vertex_ai_overview.md
agents/: __init__.py  search_agent.py
search_agent/: .env.example  README.md  agent.py  requirements.txt
search_agent_project/: README.md  __init__.py  agent.py  requirements.txt
src/: clear_crawled_pages.py  crawl4ai_mcp.py  local_file_crawler.py
src/ADK_RAG_SEARCH/: main.py
